@@ -1050,12 +1050,14 @@ struct ssl_st
 
 	int server;	/* are we the server side? - mostly used by SSL_clear*/
 
-	int new_session;/* 1 if we are to use a new session.
-	                 * 2 if we are a server and are inside a handshake
-	                 *   (i.e. not just sending a HelloRequest)
-	                 * NB: For servers, the 'new' session may actually be a previously
-	                 * cached session or even the previous session unless
-	                 * SSL_OP_NO_SESSION_RESUMPTION_ON_RENEGOTIATION is set */
+	int new_session;/* Generate a new session or reuse an old one.
+					 * NB: For servers, the 'new' session may actually be a previously
+					 * cached session or even the previous session unless
+					 * SSL_OP_NO_SESSION_RESUMPTION_ON_RENEGOTIATION is set */
+	int renegotiate;/* 1 if we are renegotiating.
+					 * 2 if we are a server and are inside a handshake
+					 *   (i.e. not just sending a HelloRequest) */
+
 	int quiet_shutdown;/* don't send shutdown packets */
 	int shutdown;	/* we have shut things down, 0x01 sent, 0x02
 			 * for received */
@@ -1717,6 +1719,7 @@ STACK_OF(SSL_CIPHER) *SSL_get_ciphers(const SSL *s);
 
 int SSL_do_handshake(SSL *s);
 int SSL_renegotiate(SSL *s);
+int SSL_renegotiate_abbreviated(SSL *s);
 int SSL_renegotiate_pending(SSL *s);
 int SSL_shutdown(SSL *s);
 
